--------------------

* If you edited templates related to indexes and posts (``index.tmpl``,
  ``post.tmpl``, ``index_helper.tmpl``, ``post_helper.tmpl``) in your
  templates, you should adjust them to use ``math_helper.tmpl``.
* If you are using KaTeX, you should remove the CSS snippet from your
  configuration (templates), as that is now handled by Nikola.

Features
--------

* Add a list of template variables to documentation (Issues #2328,
  #2712, #2259) and update the theming reference (Issue #2259)
* Add ``{post_title}`` tag for Read More links (Issue #2709)
* Include MathJax config only when needed (via Issue #2715)
* Include KaTeX CSS automatically when needed (Issue #2715)
* Split out math code into new ``math_helper.tmpl`` template (Issue
  #2715)

Bugfixes
--------

* Fixes post scanner plugin order (Issue #2720)
* Rename ``POSTS_SECTION_ARE_INDEXES`` to ``POSTS_SECTIONS_ARE_INDEXES``
* Make date ranges work in shortcode-based post lists (Issue #2690)
* Read data files only if Nikola configuration exists (Issue #2708)
* Make ``PAGE_INDEX`` work with ``PRETTY_URLS`` (Issue #2705)
* Fix PHP posts/pages not rendering on Windows (Issue #2706)
* Improving support for PostScanner plugins by asking them which compilers
  are unused (Issue #2496)

New in v7.8.4
=============

Features
--------

* Refactor RSS feed generation to allow better plugin access
* Add Jupyter config as dependency for jupyter posts (by @knowsuchagency)
* Make ``nikola plugin --list-installed`` more readable (Issue #2692)
* Accept ``now`` in post-list date conditions
* Add ``RSS_COPYRIGHT``, ``RSS_COPYRIGHT_PLAIN``, and
  ``RSS_COPYRIGHT_FORMATS`` options in conf.py which can be disabled
  by specifying ``copyright_=False`` to ``generic_rss_renderer``, or
  overriden by specifying an explicit value.
* Write PID of detached ``nikola serve`` process to a file called
  ``nikolaserve.pid``
* Append file name (generated from title) if ``nikola new_post``