@@ -99,11 +99,9 @@ Name                                Type                                Descript
 ``SLUG_TAG_PATH``                   bool                                ``SLUG_TAG_PATH`` setting
 ``social_buttons_code``             TranslatableSetting<str>            ``SOCIAL_BUTTONS_CODE`` setting
 ``sort_posts``                      function                            ``utils.sort_posts`` function
-``subtheme``                        str                                 ``THEME_REVEAL_CONFIG_SUBTHEME`` setting
 ``template_hooks``                  dict<str, TemplateHookRegistry>     Template hooks registered by plugins
 ``theme_color``                     str                                 ``THEME_COLOR`` setting
 ``timezone``                        tzinfo                              Timezone object (represents the configured timezone)
-``transition``                      str                                 ``THEME_REVEAL_CONFIG_TRANSITION`` setting
 ``translations``                    dict<str, str>                      ``TRANSLATIONS`` setting
 ``twitter_card``                    dict                                ``TWITTER_CARD`` setting, defaults to an empty dictionary
 ``url_replacer``                    function                            ``Nikola.url_replacer`` function
@@ -113,6 +111,8 @@ Name                                Type                                Descript
 ``use_cdn``                         bool                                ``USE_CDN`` setting
 ``use_katex``                       bool                                ``USE_KATEX`` setting
 ``use_open_graph``                  bool                                ``USE_OPEN_GRAPH`` setting, defaults to True
+``subtheme``                        str?                                ``THEME_REVEAL_CONFIG_SUBTHEME`` setting (only if set — deprecated)
+``transition``                      str?                                ``THEME_REVEAL_CONFIG_TRANSITION`` setting (only if set — deprecated)
 ==================================  ==================================  ================================================================================
 
 Per-page local variables
