@@ -13,6 +13,8 @@ Math support changes
 Features
 --------
 
+* Get rid of ``THEME_REVEAL_CONFIG_*`` settings, use global context
+  instead (Issue #2485)
 * Add a list of template variables to documentation (Issues #2328,
   #2712, #2259) and update the theming reference (Issue #2259)
 * Add ``{post_title}`` tag for Read More links (Issue #2709)
